[doc] Update release notes (JDK 21 Support)